Fix overflow-x bug.

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+body,
+html {
+  overflow-x: hidden;
+}
+
+
 :root {
   font-size: 10px;
 }
